# viztokens

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: render_bench.rs
src/: cli.rs  lib.rs  main.rs
src/claude/: mod.rs  parser.rs  session.rs
src/hermes/: mod.rs
src/model/: filter.rs  message.rs  mod.rs
src/store/: mod.rs  schema.sql
src/tui/: events.rs  mod.rs
src/tui/widgets/: message_list.rs  mod.rs  status_bar.rs
src/watcher/: mod.rs  parser.rs  session.rs
tests/integration/: filter_behaviour_test.rs  watcher_test.rs
tests/unit/: jsonl_parsing_test.rs  store_test.rs
